--- a/web-reactjs/index.html
+++ b/web-reactjs/index.html
@@ -70,7 +70,7 @@
      * TODO(DEVELOPER): Paste the initialization snippet from: Firebase Console > Overview > Add Firebase to your web app. *
      *********************************************************************************************************************** -->
 
-  <script type="text/babel" src="scripts/app.js"></script>
+  <script type="text/babel" src="scripts/main.js"></script>
 </body>
 
 </html>
