--- a/web-reactjs/index.html
+++ b/web-reactjs/index.html
@@ -63,7 +63,7 @@
 </head>
 
 <body>
-  <div id="mainApp" class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header"></div>
+  <div id="mainApp"></div>
 
   <!-- Firebase -->
   <!-- ***********************************************************************************************************************
