remove js lib references changed js ref from text/babel to text/javascript changed js ref from main.js to appBundle.js

--- a/web-reactjs-npm/index.html
+++ b/web-reactjs-npm/index.html
@@ -50,16 +50,6 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
   <link rel="stylesheet" href="styles/main.css">
 
-  <!-- ReactJs Components -->
-  <script src="https://fb.me/react-15.2.0.js"></script>
-  <script src="https://fb.me/react-dom-15.2.0.js"></script>
-
-  <!-- ReactJSX Support -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
-
-  <!-- ReactFire -->
-  <script src="https://cdn.firebase.com/libs/reactfire/1.0.0/reactfire.min.js"></script>
-
 </head>
 
 <body>
@@ -70,7 +60,7 @@
      * TODO(DEVELOPER): Paste the initialization snippet from: Firebase Console > Overview > Add Firebase to your web app. *
      *********************************************************************************************************************** -->
 
-  <script type="text/babel" src="scripts/main.js"></script>
+  <script type="text/javascript" src="build/appBundle.js"></script>
 </body>
 
 </html>
