--- a/web-reactjs-npm/index.html
+++ b/web-reactjs-npm/index.html
@@ -59,7 +59,7 @@
   <!-- ***********************************************************************************************************************
      * TODO(DEVELOPER): Paste the initialization snippet from: Firebase Console > Overview > Add Firebase to your web app. *
      *********************************************************************************************************************** -->
-
+  <!-- moved the above information to the private/apiKey.js file. -->
   <script type="text/javascript" src="build/appBundle.js"></script>
 </body>
 
